--- a/FISH/Packages/manifest.json
+++ b/FISH/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.coffee.ui-particle": "file:C:/Users/Benjamin/Downloads/ParticleEffectForUGUI-main/ParticleEffectForUGUI-main",
+    "com.coffee.ui-particle": "file:C:/Users/1720941/OneDrive - Mukilteo School District/Documents/ParticleEffectForUGUI-main/ParticleEffectForUGUI-main",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
